좋아요 여부를 확인하는 alreadyLiked 라우터 추가
